# CICD_Test

./: 1.txt  README.md  ci_requirments.txt  pyproject.toml
.github/: pull_request_template.md
.github/Versions/: VersionFile.txt  VersionUpdateScript.py
.github/workflows/: Build-app.yml  CreateRelease.yml  PullRequest.yml  actions.yml  build-app.yml  manual.yml  manual2.yml  post_merge.yml  push.yml  python-app.yml  test.yml
Calculator/: MyCrazyCalculator.py
Code/: MyCrazyCalculator.py
Testing/: test_withpytest.py
